      packages.
  * data/spelling/corrections:
    + [JW] Add correction for "privileges".  (Closes: #700882)

  * debian/control:
    + [NT] Bump dependency on hardening-includes to avoid having
      to work around #677530.
    + [NT] Add XS-Testsuite for autopkgtest tests.
    + [NT] Add Build-Depends on libtest-perl-critic-perl.
  * debian/lintian.install:
    + [NT] Install Test::Lintian in /usr/share/lintian/lib.
  * debian/rules:
    + [NT] Include the new Tutorial pods in the "api-doc" target.
  * debian/tests/{control,testsuite,testsuite-legacy}:
    + [NT] New file.

  * doc/tutorial/Lintian/Tutorial{/WritingChecks}.pod:
    + [NT] Add POD tutorial on writing checks.

  * frontend/lintian{,-info}:
    + [NT] Add --include-dir command line option.  This can be used
      to load additional Lintian checks, profiles, libraries or data.
      (Closes: #359059)
  * frontend/lintian:
    + [NT] Remove "make-shift" lab-query support now that
      Lintian::Lab supports it.
    + [NT] Add new command line option "--[no-]user-dirs" to disable
      loading from $HOME/.lintian{rc,/} and /etc/lintian{rc,/}.
    + [NT] Error out early if a check cannot be loaded.
    + [NT] Make --suppress-tags{,--from-file} do something when used
      with --check-part and document that --tags causes the option
      to be ignored.
    + [NT] Accept the magic token "{VENDOR}" as a part of the value
      to --profile.
    + [NT] Add new command line option "--ignore-lintian-env" to make
      lintian ignore all environment variables starting with LINTIAN_.
    + [NT] Add a new command line option --no-display-experimental.

  * lib/*:
    + [NT] Use "parent" instead of the "base" pragma.
  * lib/Lintian/Collect.pm:
    + [NT] Add "is_non_free" method to easily check of a given
      package appears to be non-free.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Re-instate the "TEXTREL" marker.  This fixes a regression
      where shared-libs compiled without pic was not reported.