@@ -22,12 +22,13 @@ package Lintian::copyright_file;
 use strict;
 use warnings;
 
+use Encode qw(decode);
+use List::MoreUtils qw(any);
+
 use Lintian::Check qw(check_spelling);
 use Lintian::Data ();
 use Lintian::Tags qw(tag);
 use Lintian::Util qw(fail slurp_entire_file file_is_encoded_in_non_utf8);
-
-use Encode qw(decode);
 
 our $KNOWN_ESSENTIAL = Lintian::Data->new('fields/essential');
 
@@ -288,7 +289,7 @@ if ($gpl || m,/usr/share/common-licenses/GPL,) {
         if (defined $info->field('pre-depends')) {
             push @depends, split (/\s*,\s*/, scalar $info->field('pre-depends'));
         }
-        if (grep { /^libssl[0-9.]+(?:\s|\z)/ && !/\|/ } @depends) {
+        if (any { /^libssl[0-9.]+(?:\s|\z)/ && !/\|/ } @depends) {
             tag 'possible-gpl-code-linked-with-openssl';
         }
     }
