@@ -33,6 +33,7 @@ Build-Depends: binutils,
                libemail-valid-perl,
                libhtml-parser-perl,
                libipc-run-perl,
+               liblist-moreutils-perl,
                libparse-debianchangelog-perl,
                libtest-minimumversion-perl,
                libtest-perl-critic-perl,
@@ -81,6 +82,7 @@ Depends: binutils,
          libdpkg-perl,
          libemail-valid-perl,
          libipc-run-perl,
+         liblist-moreutils-perl,
          libparse-debianchangelog-perl,
          libtext-levenshtein-perl,
          libtimedate-perl,
