@@ -26,8 +26,8 @@ use strict;
 use warnings;
 
 use Cwd qw(abs_path);
-
 use Getopt::Long;
+use List::MoreUtils qw(any);
 use POSIX qw(:sys_wait_h);
 
 # }}}
@@ -358,7 +358,7 @@ sub record_display_level {
     $op = '=' unless defined $op;
     $rel = '=' unless defined $rel;
     if (not defined $certainty) {
-        if (grep { $severity eq $_ } @certainties) {
+        if (any { $severity eq $_ } @certainties) {
             $certainty = $severity;
             undef $severity;
         }
@@ -1550,7 +1550,7 @@ sub _find_changes {
         while ( my $line = <$foreign> ) {
             chomp $line;
             # Skip already attempted architectures (e.g. via DEB_BUILD_ARCH)
-            next if grep { $_ eq $line } @archs;
+            next if any { $_ eq $line } @archs;
             push @archs, $line;
         }
         close $foreign;
